--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Toastify {
+  font-size: 14px;
+}
+
+.Toastify .Toastify__toast-container {
+  width: 350px;
+}
+
+@media screen and (max-width: 768px) {
+  .Toastify .Toastify__toast {
+    width: 88vw;
+    margin-right: 6vw;
+    margin-left: 6vw;
+    margin-top: 15px;
+  }
+}
+
+.Toastify__toast-theme--dark {
+  background: #161d27 !important;
+}
